lib/mpv_bindings.dart


  /// Similar to mpv_destroy(), but brings the player and all clients down
  /// as well, and waits until all of them are destroyed. This function blocks. The
  /// advantage over mpv_destroy() is that while mpv_destroy() merely
  /// detaches the client handle from the player, this function quits the player,
  /// waits until all other clients are destroyed (i.e. all mpv_handles are
  /// detached), and also waits for the final termination of the player.
  ///
  /// Since mpv_destroy() is called somewhere on the way, it's not safe to
  /// call other functions concurrently on the same context.
  ///
  /// Since mpv client API version 1.29:
  /// The first call on any mpv_handle will block until the core is destroyed.
  /// This means it will wait until other mpv_handle have been destroyed. If you
  /// want asynchronous destruction, just run the "quit" command, and then react
  /// to the MPV_EVENT_SHUTDOWN event.
  /// If another mpv_handle already called mpv_terminate_destroy(), this call will
  /// not actually block. It will destroy the mpv_handle, and exit immediately,
  /// while other mpv_handles might still be uninitializing.
  ///
  /// Before mpv client API version 1.29:
  /// If this is called on a mpv_handle that was not created with mpv_create(),
  /// this function will merely send a quit command and then call
  /// mpv_destroy(), without waiting for the actual shutdown.
  void mpv_terminate_destroy(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_terminate_destroy(
      ctx,
    );
  }

  late final _mpv_terminate_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<mpv_handle>)>>(
          'mpv_terminate_destroy');
  late final _mpv_terminate_destroy = _mpv_terminate_destroyPtr
      .asFunction<void Function(ffi.Pointer<mpv_handle>)>();

  /// Create a new client handle connected to the same player core as ctx. This
  /// context has its own event queue, its own mpv_request_event() state, its own
  /// mpv_request_log_messages() state, its own set of observed properties, and
  /// its own state for asynchronous operations. Otherwise, everything is shared.
  ///
  /// This handle should be destroyed with mpv_destroy() if no longer
  /// needed. The core will live as long as there is at least 1 handle referencing
  /// it. Any handle can make the core quit, which will result in every handle
  /// receiving MPV_EVENT_SHUTDOWN.
  ///
  /// This function can not be called before the main handle was initialized with
  /// mpv_initialize(). The new handle is always initialized, unless ctx=NULL was
  /// passed.
  ///
  /// @param ctx Used to get the reference to the mpv core; handle-specific
  /// settings and parameters are not used.
  /// If NULL, this function behaves like mpv_create() (ignores name).
  /// @param name The client name. This will be returned by mpv_client_name(). If
  /// the name is already in use, or contains non-alphanumeric
  /// characters (other than '_'), the name is modified to fit.
  /// If NULL, an arbitrary name is automatically chosen.
  /// @return a new handle, or NULL on error
  ffi.Pointer<mpv_handle> mpv_create_client(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _mpv_create_client(
      ctx,
      name,
    );
  }

  late final _mpv_create_clientPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<mpv_handle> Function(ffi.Pointer<mpv_handle>,
              ffi.Pointer<ffi.Char>)>>('mpv_create_client');
  late final _mpv_create_client = _mpv_create_clientPtr.asFunction<
      ffi.Pointer<mpv_handle> Function(
          ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>)>();

  /// This is the same as mpv_create_client(), but the created mpv_handle is
  /// treated as a weak reference. If all mpv_handles referencing a core are
  /// weak references, the core is automatically destroyed. (This still goes
  /// through normal uninit of course. Effectively, if the last non-weak mpv_handle
  /// is destroyed, then the weak mpv_handles receive MPV_EVENT_SHUTDOWN and are
  /// asked to terminate as well.)
  ///
  /// Note if you want to use this like refcounting: you have to be aware that
  /// mpv_terminate_destroy() _and_ mpv_destroy() for the last non-weak
  /// mpv_handle will block until all weak mpv_handles are destroyed.
  ffi.Pointer<mpv_handle> mpv_create_weak_client(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _mpv_create_weak_client(
      ctx,
      name,
    );
  }

  late final _mpv_create_weak_clientPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<mpv_handle> Function(ffi.Pointer<mpv_handle>,
              ffi.Pointer<ffi.Char>)>>('mpv_create_weak_client');
  late final _mpv_create_weak_client = _mpv_create_weak_clientPtr.asFunction<
      ffi.Pointer<mpv_handle> Function(
          ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>)>();

  /// Load a config file. This loads and parses the file, and sets every entry in
  /// the config file's default section as if mpv_set_option_string() is called.
  ///
  /// The filename should be an absolute path. If it isn't, the actual path used
  /// is unspecified. (Note: an absolute path starts with '/' on UNIX.) If the
  /// file wasn't found, MPV_ERROR_INVALID_PARAMETER is returned.
  ///
  /// If a fatal error happens when parsing a config file, MPV_ERROR_OPTION_ERROR
  /// is returned. Errors when setting options as well as other types or errors
  /// are ignored (even if options do not exist). You can still try to capture
  /// the resulting error messages with mpv_request_log_messages(). Note that it's
  /// possible that some options were successfully set even if any of these errors
  /// happen.
  ///
  /// @param filename absolute path to the config file on the local filesystem
  /// @return error code
  int mpv_load_config_file(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _mpv_load_config_file(
      ctx,
      filename,
    );
  }

  late final _mpv_load_config_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>,
              ffi.Pointer<ffi.Char>)>>('mpv_load_config_file');
  late final _mpv_load_config_file = _mpv_load_config_filePtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>)>();

  /// This does nothing since mpv 0.23.0 (API version 1.24). Below is the
  /// description of the old behavior.
  ///
  /// Stop the playback thread. This means the core will stop doing anything, and
  /// only run and answer to client API requests. This is sometimes useful; for
  /// example, no new frame will be queued to the video output, so doing requests
  /// which have to wait on the video output can run instantly.
  ///
  /// Suspension is reentrant and recursive for convenience. Any thread can call
  /// the suspend function multiple times, and the playback thread will remain
  /// suspended until the last thread resumes it. Note that during suspension, all
  /// clients still have concurrent access to the core, which is serialized through
  /// a single mutex.
  ///
  /// Call mpv_resume() to resume the playback thread. You must call mpv_resume()
  /// for each mpv_suspend() call. Calling mpv_resume() more often than
  /// mpv_suspend() is not allowed.
  ///
  /// Calling this on an uninitialized player (see mpv_create()) will deadlock.
  ///
  /// @deprecated This function, as well as mpv_resume(), are deprecated, and
  /// will stop doing anything soon. Their semantics were never
  /// well-defined, and their usefulness is extremely limited. The
  /// calls will remain stubs in order to keep ABI compatibility.
  void mpv_suspend(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_suspend(
      ctx,
    );
  }

  late final _mpv_suspendPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<mpv_handle>)>>(
          'mpv_suspend');
  late final _mpv_suspend =
      _mpv_suspendPtr.asFunction<void Function(ffi.Pointer<mpv_handle>)>();

  /// See mpv_suspend().
  void mpv_resume(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_resume(
      ctx,
    );
  }

  late final _mpv_resumePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<mpv_handle>)>>(
          'mpv_resume');
  late final _mpv_resume =
      _mpv_resumePtr.asFunction<void Function(ffi.Pointer<mpv_handle>)>();

  /// Return the internal time in microseconds. This has an arbitrary start offset,
  /// but will never wrap or go backwards.
  ///
  /// Note that this is always the real time, and doesn't necessarily have to do
  /// with playback time. For example, playback could go faster or slower due to
  /// playback speed, or due to playback being paused. Use the "time-pos" property
  /// instead to get the playback status.
  ///
  /// Unlike other libmpv APIs, this can be called at absolutely any time (even
  /// within wakeup callbacks), as long as the context is valid.
  ///
  /// Safe to be called from mpv render API threads.
  int mpv_get_time_us(
    ffi.Pointer<mpv_handle> ctx,
  ) {
    return _mpv_get_time_us(
      ctx,
    );
  }

  late final _mpv_get_time_usPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<mpv_handle>)>>(
          'mpv_get_time_us');
  late final _mpv_get_time_us =
      _mpv_get_time_usPtr.asFunction<int Function(ffi.Pointer<mpv_handle>)>();

  /// Frees any data referenced by the node. It doesn't free the node itself.
  /// Call this only if the mpv client API set the node. If you constructed the
  /// node yourself (manually), you have to free it yourself.
  ///
  /// If node->format is MPV_FORMAT_NONE, this call does nothing. Likewise, if
  /// the client API sets a node with this format, this function doesn't need to
  /// be called. (This is just a clarification that there's no danger of anything
  /// strange happening in these cases.)
  void mpv_free_node_contents(
    ffi.Pointer<mpv_node> node,
  ) {
    return _mpv_free_node_contents(
      node,
    );
  }

  late final _mpv_free_node_contentsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<mpv_node>)>>(
          'mpv_free_node_contents');
  late final _mpv_free_node_contents = _mpv_free_node_contentsPtr
      .asFunction<void Function(ffi.Pointer<mpv_node>)>();
